# RayTracer

./: .gitignore  CMakeLists.txt  README.md
include/raytracing/: camera.h  color.h  constant.h  hittable.h  hittable_list.h  interval.h  ray.h  raytracer.md  sphere.h  vec3.h
src/: commands.md  main.cpp
